--- a/StewardClient/src/app/shared/views/persist-ugc-modal/persist-ugc-modal.component.html
+++ b/StewardClient/src/app/shared/views/persist-ugc-modal/persist-ugc-modal.component.html
@@ -17,11 +17,17 @@
     <mat-form-field appearance="fill">
       <mat-label>Persisted UGC Title Override</mat-label>
       <input matInput [formControl]="formControls.title" />
+      <mat-hint
+        >*Optional: Persisted UGC will use existing title if this isn't filled out.</mat-hint
+      >
     </mat-form-field>
 
     <mat-form-field appearance="fill">
       <mat-label>Persisted UGC Description Override</mat-label>
       <input matInput [formControl]="formControls.description" />
+      <mat-hint
+        >*Optional: Persisted UGC will use existing description if this isn't filled out.</mat-hint
+      >
     </mat-form-field>
   </form>
 </mat-dialog-content>
