--- a/StewardClient/src/app/shared/views/persist-ugc-modal/woodstock/woodstock-persist-ugc-modal.component.html
+++ b/StewardClient/src/app/shared/views/persist-ugc-modal/woodstock/woodstock-persist-ugc-modal.component.html
@@ -1,4 +1,1 @@
-<persist-ugc-modal
-  [service]="service"
-  [ugcItem]="data"
-></persist-ugc-modal>
+<persist-ugc-modal [service]="service" [ugcItem]="data"></persist-ugc-modal>
