--- a/StewardClient/src/app/shared/views/persist-ugc-modal/persist-ugc-modal.component.html
+++ b/StewardClient/src/app/shared/views/persist-ugc-modal/persist-ugc-modal.component.html
@@ -43,11 +43,17 @@
   >
     Close
   </button>
+  <verify-button
+    [disabled]="!formGroup.valid"
+    #verifyUpdateBtn
+    [permissionAttribute]="persistUgcPermAttribute"
+    [permissionTitle]="service.title"
+  ></verify-button>
   <button
     [disabled]="!formGroup.valid"
     stateManager
     [monitor]="postMonitor"
-    [verifyWith]="verify"
+    [verifyWithV2]="verifyUpdateBtn"
     monitorWarn
     monitorWarnSnackbar
     [monitorCompleteSnackbar]="ugcOperationSnackbarComponent"
@@ -59,13 +65,4 @@
     Persist UGC
     <button-spinner [monitor]="postMonitor" defaultIcon="save"></button-spinner>
   </button>
-  <mat-checkbox
-    class="sf-verify-checkbox"
-    #verify
-    stateManager
-    [permissionAttribute]="persistUgcPermAttribute"
-    [permissionTitle]="service.title"
-    matTooltip="Verify"
-    >Verify</mat-checkbox
-  >
 </mat-dialog-actions>
