Address PR feedback

--- a/StewardClient/src/app/pages/tools/pages/leaderboards/components/leaderboard-scores/leaderboard-scores.component.html
+++ b/StewardClient/src/app/pages/tools/pages/leaderboards/components/leaderboard-scores/leaderboard-scores.component.html
@@ -93,6 +93,7 @@
         </button>
         <verify-button
           #verifyMultiDeleteScoresBtn
+          [disabled]="selectedScores?.length <= 0"
           [permissionAttribute]="permAttribute"
           [permissionTitle]="gameTitle"
         ></verify-button>
@@ -238,6 +239,7 @@
               <div class="delete-score">
                 <verify-button
                   #verifyDeleteScoresBtn
+                  [disabled]="selectedScores?.length > 0"
                   [permissionAttribute]="permAttribute"
                   [permissionTitle]="gameTitle"
                 ></verify-button>
