--- a/StewardClient/src/app/pages/tools/pages/permission-management/components/team-permission-management/team-permission-management.component.html
+++ b/StewardClient/src/app/pages/tools/pages/permission-management/components/team-permission-management/team-permission-management.component.html
@@ -18,6 +18,7 @@
           mat-raised-button
           color="warn"
           (click)="deleteTeam()"
+          [disabled]="!selectedTeam"
           stateManager
           [verifyWithV2]="verifyDeleteBtn"
           [monitor]="deleteTeamMonitor"
