--- a/StewardClient/src/app/pages/tools/pages/playfab/components/build-lock-change-dialog/build-lock-change-dialog.component.html
+++ b/StewardClient/src/app/pages/tools/pages/playfab/components/build-lock-change-dialog/build-lock-change-dialog.component.html
@@ -27,6 +27,7 @@
     [verifyWithV2]="verifyActionBtn"
     cdkFocusInitial
     (click)="commitAction()"
+    [disabled]="formGroup.invalid"
     stateManager
     [monitor]="actionMonitor"
     monitorDisable
