--- a/StewardClient/src/app/shared/components/localization/create-localized-string/create-localized-string.component.html
+++ b/StewardClient/src/app/shared/components/localization/create-localized-string/create-localized-string.component.html
@@ -55,6 +55,7 @@
         <div class="sf-horizontal">
           <verify-button
             #verifySubmissionBtn
+            [disabled]="!formGroup.valid"
             [permissionAttribute]="permAttribute"
             [permissionTitle]="service?.gameTitle"
           ></verify-button>
