--- a/StewardClient/src/app/shared/views/paid-entitlements/paid-entitlements.component.html
+++ b/StewardClient/src/app/shared/views/paid-entitlements/paid-entitlements.component.html
@@ -23,6 +23,7 @@
         <div class="sf-horizontal">
           <verify-button
             #verifySubmissionButton
+            [disabled]="!this.paidEntitlementFormGroup.valid"
             [permissionAttribute]="grantPaidEntitlementAttribute"
             [permissionTitle]="serviceContract.gameTitle"
           ></verify-button>
