--- a/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.html
+++ b/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.html
@@ -11,6 +11,7 @@
     </button>
     <verify-button
       #verifyCheckboxHideBtn
+      [disabled]="selectedUgcs?.length <= 0"
       [permissionAttribute]="hideUgcPermission"
       [permissionTitle]="gameTitle"
     ></verify-button>
