--- a/StewardClient/src/app/pages/tools/pages/obligation/obligation.component.html
+++ b/StewardClient/src/app/pages/tools/pages/obligation/obligation.component.html
@@ -91,8 +91,8 @@
       <div>
         <verify-button
           #verifyConfirmPostBtn
+          [disabled]="!formGroup.valid"
           [permissionAttribute]="permAttribute"
-          matTooltip="This operation is UNSAFE. It can force replace a pipeline into a bad state. Check to acknowledge."
         ></verify-button>
         <button
           mat-stroked-button
@@ -117,8 +117,8 @@
       <div>
         <verify-button
           #verifyConfirmDeleteBtn
+          [disabled]="!formGroup.valid"
           [permissionAttribute]="permAttribute"
-          matTooltip="This operation is UNSAFE. It permanently deletes a pipeline. Check to acknowledge."
         ></verify-button>
         <button
           mat-raised-button
