--- a/StewardClient/src/app/shared/views/persist-ugc-modal/persist-ugc-modal.component.html
+++ b/StewardClient/src/app/shared/views/persist-ugc-modal/persist-ugc-modal.component.html
@@ -20,6 +20,9 @@
       <mat-hint
         >*Optional: Persisted UGC will use existing title if this isn't filled out.</mat-hint
       >
+      <mat-error *ngIf="formControls.title?.hasError('maxlength')">
+        Title must be 32 characters or less.
+      </mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="fill">
@@ -28,6 +31,9 @@
       <mat-hint
         >*Optional: Persisted UGC will use existing description if this isn't filled out.</mat-hint
       >
+      <mat-error *ngIf="formControls.description?.hasError('maxlength')">
+        Description must be 128 characters or less.
+      </mat-error>
     </mat-form-field>
   </form>
 </mat-dialog-content>
