--- a/StewardClient/src/app/pages/tools/pages/unified-calendar/steelhead/components/rivals/components/rivals-calendar-view/steelhead-rivals-calendar-view.component.html
+++ b/StewardClient/src/app/pages/tools/pages/unified-calendar/steelhead/components/rivals/components/rivals-calendar-view/steelhead-rivals-calendar-view.component.html
@@ -2,7 +2,7 @@
   <ng-container *waitForMonitor="getActionMonitor">
     <div class="steward-layout-pane steward-layout-main-group">
       <mat-card>
-        <mat-card-title>Showroom Schedule</mat-card-title>
+        <mat-card-title>Rivals Schedule</mat-card-title>
         <div class="calendar-header">
           <div>
             <button mat-raised-button mwlCalendarPreviousView [view]="view" [(viewDate)]="viewDate">
