work so far, having trouble passing through file without it imploding

--- a/StewardClient/src/app/pages/tools/pages/ac-log-reader/base/ac-log-reader.base.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ac-log-reader/base/ac-log-reader.base.component.html
@@ -3,7 +3,47 @@
     <mat-card-title>AC Log Reader</mat-card-title>
     <mat-card-subtitle>{{ service?.gameTitle | titlecase }}</mat-card-subtitle>
     <div class="sf-spacer"></div>
-    <input type="file" class="file-upload" onchange="console.log(event.target.files)">
+    <form [formGroup]="formGroup" class="sf-wrapper">
+      <div class="sf-vertical">
+        <input
+          #fileUpload
+          type="file"
+          accept=".Crash_Info"
+          class="file-input"
+          [formControl]="formControls.fileName"
+          (change)="onFileSelected($event)">
+        <div class="file-upload">
+          {{formControls.fileName?.value || "No file uploaded yet."}}
+          <button mat-mini-fab color="primary" class="upload-btn"
+            (click)="fileUpload.click()">
+              <mat-icon>attach_file</mat-icon>
+          </button>
+        </div>
+        <!-- <mat-label>Upload Log</mat-label>
+        <input type="file" [formControl]="formControls.file" class="file-upload" onchange="console.log(event.target.files)">  -->
+
+        <button
+          mat-raised-button
+          color="primary"
+          [disabled]="!formGroup.valid"
+          matTooltip="Decode AC Log"
+          aria-label="Decode AC Log"
+          clickStop
+          stateManager
+          [permissionAttribute]="decodeAcLogsAttribute"
+          [permissionTitle]="service?.gameTitle"
+          [monitor]="getMonitor"
+          monitorDisable
+          monitorWarn
+          monitorWarnSnackbar
+          (click)="onDecodeClick()"
+      >
+        Decode
+        <button-spinner [monitor]="getMonitor" defaultIcon="document_scanner"></button-spinner>
+      </button>
+      </div>
+    </form>
+    
   </mat-card-header>
   <mat-card-content class="decoded-content">
     <p>{{ decodedLog }}</p>
