--- a/StewardClient/src/app/pages/tools/pages/ac-log-reader/base/ac-log-reader.base.component.scss
+++ b/StewardClient/src/app/pages/tools/pages/ac-log-reader/base/ac-log-reader.base.component.scss
@@ -12,3 +12,11 @@ mat-card {
 .file-input {
   display: none;
 }
+
+.decode-button {
+  width: $button-min-size;
+}
+
+div.align-right {
+  align-items: end;
+}
