--- a/StewardClient/src/app/pages/tools/pages/ac-log-reader/base/ac-log-reader.base.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ac-log-reader/base/ac-log-reader.base.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <mat-card-header>
-    <mat-card-title>AC Log Reader</mat-card-title>
+    <mat-card-title>Anti-Cheat Log Reader</mat-card-title>
     <mat-card-subtitle>{{ service?.gameTitle | titlecase }}</mat-card-subtitle>
     <div class="sf-spacer"></div>
     <form [formGroup]="formGroup" class="sf-wrapper">
