--- a/StewardClient/src/app/shared/views/player-auctions/player-auctions.component.html
+++ b/StewardClient/src/app/shared/views/player-auctions/player-auctions.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <mat-card-content>
     <mat-card-header>
-      <mat-card-title>Auctions</mat-card-title>
+      <mat-card-title>Created Auctions</mat-card-title>
       <mat-card-subtitle
         >{{ gameTitle | humanize }} (Max results 100, filter to find more)
       </mat-card-subtitle>
