--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
@@ -6,23 +6,32 @@
         <mat-card-subtitle>IDs and other text</mat-card-subtitle>
       </mat-card-header>
       <div class="sf-wrapper">
+        <div class="sf-vertical">
+          <model-dump-flags></model-dump-flags>
+          <model-dump-xuids></model-dump-xuids>
+          <model-dump-simple-table
+            [values]="source.processedModel.extractedStrings.ids"
+          ></model-dump-simple-table>
+          <model-dump-humanize-table
+            [values]="source.processedModel.extractedStrings.other"
+          ></model-dump-humanize-table>
+          <model-dump-humanize-array-table
+            [values]="source.processedModel.extractedStringArrays.all"
+          ></model-dump-humanize-array-table>
+          <model-dump-simple-table
+            [values]="source.processedModel.extractedNumbers.ids"
+          ></model-dump-simple-table>
+        </div>
+      </div>
+    </mat-card>
+
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title>UGC Actions</mat-card-title>
+        <mat-card-subtitle>Take actions on UGC</mat-card-subtitle>
+      </mat-card-header>
+      <div class="sf-wrapper">
         <div class="sf-horizontal do-not-align-items">
-          <div class="sf-vertical">
-            <model-dump-flags></model-dump-flags>
-            <model-dump-xuids></model-dump-xuids>
-            <model-dump-simple-table
-              [values]="source.processedModel.extractedStrings.ids"
-            ></model-dump-simple-table>
-            <model-dump-humanize-table
-              [values]="source.processedModel.extractedStrings.other"
-            ></model-dump-humanize-table>
-            <model-dump-humanize-array-table
-              [values]="source.processedModel.extractedStringArrays.all"
-            ></model-dump-humanize-array-table>
-            <model-dump-simple-table
-              [values]="source.processedModel.extractedNumbers.ids"
-            ></model-dump-simple-table>
-          </div>
           <div class="sf-vertical">
             <ugc-download-button
               class="sf-full-width sf-default-margins sf-action-list-margins"
@@ -39,6 +48,15 @@
               [permissionTitle]="gameTitle"
             >
               <span [matTooltip]="featureMatTooltip">Update Featured Status</span>
+            </button>
+            <button
+            class="sf-default-margins sf-action-list-margins"
+            [disabled]="!canGenerateSharecode"
+            mat-raised-button
+            color="primary"
+            (click)="generateSharecodeForUgc()"
+            >
+              <span matTooltip='Generate sharecode for UGC'>Generate Sharecode</span>
             </button>
             <div *waitForMonitor="getReportReasonsMonitor">
               <mat-form-field
@@ -61,7 +79,7 @@
                 [disabled]="!selectedReason"
               ></verify-button>
               <button
-                class="sf-action-list-margins sf-grow-1"
+                class="sf-action-list-margins"
                 mat-raised-button
                 color="warn"
                 [verifyWithV2]="verifyReportBtn"
@@ -88,7 +106,7 @@
                 [permissionTitle]="gameTitle"
               ></verify-button>
               <button
-                class="sf-action-list-margins sf-grow-1"
+                class="sf-action-list-margins"
                 mat-raised-button
                 color="warn"
                 [verifyWithV2]="verifyHideBtn"
@@ -116,7 +134,7 @@
                 [permissionTitle]="gameTitle"
               ></verify-button>
               <button
-                class="sf-action-list-margins sf-grow-1"
+                class="sf-action-list-margins"
                 mat-raised-button
                 color="accent"
                 [verifyWithV2]="verifyPersistBtn"
@@ -146,7 +164,7 @@
                 [permissionTitle]="gameTitle"
               ></verify-button>
               <button
-                class="sf-action-list-margins sf-grow-1"
+                class="sf-action-list-margins"
                 mat-raised-button
                 color="accent"
                 [verifyWithV2]="verifyCloneBtn"
@@ -179,8 +197,9 @@
               </button>
             </div>
           </div>
-        </div>
-      </div>
+
+        </div> 
+      </div> 
     </mat-card>
 
     <mat-card>
