--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/steelhead-lookup/steelhead-lookup.component.scss
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/steelhead-lookup/steelhead-lookup.component.scss
@@ -42,3 +42,7 @@ p {
 button {
   min-width: $button-min-size;
 }
+
+.do-not-manipulate-margin.do-not-manipulate-margin.do-not-manipulate-margin {
+  margin: 0em;
+}
