--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.scss
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.scss
@@ -48,3 +48,7 @@ p.padded {
 button {
   min-width: $button-min-size;
 }
+
+.do-not-manipulate-margin.do-not-manipulate-margin.do-not-manipulate-margin {
+  margin: 0em;
+}
